migrate moderately complex components to use signals. fix an issue with the labelPosition in the ix-slide-toggle component

--- a/projects/truenas-ui/src/lib/ix-button/ix-button.component.html
+++ b/projects/truenas-ui/src/lib/ix-button/ix-button.component.html
@@ -1,10 +1,10 @@
 <button
   type="button"
   (click)="onClick.emit($event)"
-  [ngClass]="classes"
-  [ngStyle]="{ 'background-color': backgroundColor }"
-  [disabled]="disabled"
+  [ngClass]="classes()"
+  [ngStyle]="{ 'background-color': backgroundColor() }"
+  [disabled]="disabled()"
 >
-  {{ label }}
+  {{ label() }}
 </button>
 
