--- a/projects/truenas-ui/src/lib/ix-radio/ix-radio.component.html
+++ b/projects/truenas-ui/src/lib/ix-radio/ix-radio.component.html
@@ -1,32 +1,32 @@
-<div [ngClass]="classes">
+<div [ngClass]="classes()">
   <label [for]="id" class="ix-radio__label">
     <input
       #radioEl
       type="radio"
       [id]="id"
-      [name]="name"
-      [value]="value"
+      [name]="name()"
+      [value]="value()"
       [checked]="checked"
-      [disabled]="disabled"
-      [required]="required"
-      [attr.data-testid]="testId"
-      [attr.aria-describedby]="error ? id + '-error' : null"
-      [attr.aria-invalid]="error ? 'true' : null"
+      [disabled]="isDisabled()"
+      [required]="required()"
+      [attr.data-testid]="testId()"
+      [attr.aria-describedby]="error() ? id + '-error' : null"
+      [attr.aria-invalid]="error() ? 'true' : null"
       class="ix-radio__input"
       (change)="onRadioChange($event)"
     />
     <span class="ix-radio__checkmark"></span>
-    <span class="ix-radio__text">{{ label }}</span>
+    <span class="ix-radio__text">{{ label() }}</span>
   </label>
-  
-  @if (error) {
-    <div 
-      [id]="id + '-error'" 
+
+  @if (error()) {
+    <div
+      [id]="id + '-error'"
       class="ix-radio__error"
       role="alert"
       aria-live="polite"
     >
-      {{ error }}
+      {{ error() }}
     </div>
   }
 </div>
