--- a/projects/truenas-ui/src/lib/ix-icon/ix-icon.component.html
+++ b/projects/truenas-ui/src/lib/ix-icon/ix-icon.component.html
@@ -1,9 +1,9 @@
-<div 
+<div
   class="ix-icon"
-  [ngClass]="'ix-icon--' + size"
-  [style.color]="color"
-  [attr.aria-label]="effectiveAriaLabel"
-  [attr.title]="tooltip"
+  [ngClass]="'ix-icon--' + size()"
+  [style.color]="color()"
+  [attr.aria-label]="effectiveAriaLabel()"
+  [attr.title]="tooltip()"
   role="img">
   
 
