--- a/projects/truenas-ui/src/lib/ix-chip/ix-chip.component.html
+++ b/projects/truenas-ui/src/lib/ix-chip/ix-chip.component.html
@@ -1,24 +1,24 @@
 <div
   #chipEl
-  [ngClass]="classes"
-  [attr.data-testid]="testId"
-  [attr.aria-label]="label"
-  [attr.aria-disabled]="disabled"
-  [attr.tabindex]="disabled ? -1 : 0"
+  [ngClass]="classes()"
+  [attr.data-testid]="testId()"
+  [attr.aria-label]="label()"
+  [attr.aria-disabled]="disabled()"
+  [attr.tabindex]="disabled() ? -1 : 0"
   role="button"
   (click)="handleClick($event)"
   (keydown)="handleKeyDown($event)"
 >
-  @if (icon) {
-    <ix-icon [name]="icon" class="ix-chip__icon" size="sm"></ix-icon>
+  @if (icon()) {
+    <ix-icon [name]="icon()!" class="ix-chip__icon" size="sm"></ix-icon>
   }
-  <span class="ix-chip__label">{{ label }}</span>
-  @if (closable) {
+  <span class="ix-chip__label">{{ label() }}</span>
+  @if (closable()) {
     <button
       type="button"
       class="ix-chip__close"
-      [attr.aria-label]="'Remove ' + label"
-      [disabled]="disabled"
+      [attr.aria-label]="'Remove ' + label()"
+      [disabled]="disabled()"
       (click)="handleClose($event)"
     >
       <span class="ix-chip__close-icon">×</span>
