--- a/projects/truenas-ui/src/lib/ix-tabs/ix-tabs.component.html
+++ b/projects/truenas-ui/src/lib/ix-tabs/ix-tabs.component.html
@@ -1,16 +1,16 @@
-<div [ngClass]="classes" role="tablist" [attr.aria-orientation]="orientation">
+<div [ngClass]="classes()" role="tablist" [attr.aria-orientation]="orientation()">
   <div class="ix-tabs__header" #tabHeader>
     <ng-content select="ix-tab"></ng-content>
-    @if (highlightBarVisible) {
+    @if (highlightBarVisible()) {
       <div class="ix-tabs__highlight-bar"
-           [style.left.px]="highlightBarLeft"
-           [style.width.px]="highlightBarWidth"
-           [style.top.px]="highlightBarTop"
-           [style.height.px]="highlightBarHeight">
+           [style.left.px]="highlightBarLeft()"
+           [style.width.px]="highlightBarWidth()"
+           [style.top.px]="highlightBarTop()"
+           [style.height.px]="highlightBarHeight()">
       </div>
     }
   </div>
-  
+
   <div class="ix-tabs__content">
     <ng-content select="ix-tab-panel"></ng-content>
   </div>
