--- a/projects/truenas-ui/src/lib/ix-file-picker/ix-file-picker.component.html
+++ b/projects/truenas-ui/src/lib/ix-file-picker/ix-file-picker.component.html
@@ -5,16 +5,16 @@
       class="ix-file-picker-input"
       [class.error]="hasError()"
       [value]="selectedPath() | ixStripMntPrefix"
-      [placeholder]="placeholder"
-      [readonly]="!allowManualInput"
-      [disabled]="disabled"
+      [placeholder]="placeholder()"
+      [readonly]="!allowManualInput()"
+      [disabled]="isDisabled()"
       (input)="onPathInput($event)">
-    
-    <button 
+
+    <button
       type="button"
       class="ix-file-picker-toggle"
       (click)="openFilePicker()"
-      [disabled]="disabled"
+      [disabled]="isDisabled()"
       aria-label="Open file picker">
       <ix-icon name="folder" library="mdi"></ix-icon>
     </button>
@@ -23,17 +23,17 @@
   <ng-template #filePickerTemplate>
     <ix-file-picker-popup
       class="ix-file-picker-popup"
-      [mode]="mode"
-      [multiSelect]="multiSelect"
-      [allowCreate]="allowCreate"
-      [allowDatasetCreate]="allowDatasetCreate"
-      [allowZvolCreate]="allowZvolCreate"
+      [mode]="mode()"
+      [multiSelect]="multiSelect()"
+      [allowCreate]="allowCreate()"
+      [allowDatasetCreate]="allowDatasetCreate()"
+      [allowZvolCreate]="allowZvolCreate()"
       [currentPath]="currentPath()"
       [fileItems]="fileItems()"
       [selectedItems]="selectedItems()"
       [loading]="loading()"
       [creationLoading]="creationLoading()"
-      [fileExtensions]="fileExtensions"
+      [fileExtensions]="fileExtensions()"
       (itemClick)="onItemClick($event)"
       (itemDoubleClick)="onItemDoubleClick($event)"
       (pathNavigate)="navigateToPath($event)"
