migrate ix-table to use signals

--- a/projects/truenas-ui/src/lib/ix-table/ix-table.component.html
+++ b/projects/truenas-ui/src/lib/ix-table/ix-table.component.html
@@ -2,7 +2,7 @@
   <!-- Header Row -->
   <thead class="ix-table__header">
     <tr class="ix-table__header-row">
-      @for (column of displayedColumns; track $index) {
+      @for (column of displayedColumns(); track $index) {
         <th
           class="ix-table__header-cell"
           [attr.data-column]="column">
@@ -21,9 +21,9 @@
 
   <!-- Data Rows -->
   <tbody class="ix-table__body">
-    @for (row of data; track $index) {
+    @for (row of data(); track $index) {
       <tr class="ix-table__row">
-        @for (column of displayedColumns; track $index) {
+        @for (column of displayedColumns(); track $index) {
           <td
             class="ix-table__cell"
             [attr.data-column]="column">
