migrate some more @ViewChild instances to signals

--- a/projects/truenas-ui/src/lib/ix-stepper/ix-stepper.component.html
+++ b/projects/truenas-ui/src/lib/ix-stepper/ix-stepper.component.html
@@ -51,7 +51,7 @@
       @if (selectedIndex() === i) {
         <div class="ix-stepper__step-content"
              [@stepTransition]="selectedIndex()">
-          <ng-container *ngTemplateOutlet="step.content"></ng-container>
+          <ng-container *ngTemplateOutlet="step.content()"></ng-container>
         </div>
       }
     }
