--- a/projects/truenas-ui/src/lib/ix-tab-panel/ix-tab-panel.component.html
+++ b/projects/truenas-ui/src/lib/ix-tab-panel/ix-tab-panel.component.html
@@ -1,12 +1,12 @@
 <div
-  [ngClass]="classes"
-  [attr.data-testid]="testId"
-  [attr.aria-hidden]="!isActive"
-  [attr.aria-labelledby]="'tab-' + index"
+  [ngClass]="classes()"
+  [attr.data-testid]="testId()"
+  [attr.aria-hidden]="!isActive()"
+  [attr.aria-labelledby]="'tab-' + index()"
   role="tabpanel"
-  [attr.tabindex]="isActive ? 0 : -1"
+  [attr.tabindex]="isActive() ? 0 : -1"
 >
-  @if (shouldRender) {
+  @if (shouldRender()) {
     <div class="ix-tab-panel__content">
       <ng-content></ng-content>
     </div>
