--- a/projects/truenas-ui/src/lib/ix-table/ix-table.component.html
+++ b/projects/truenas-ui/src/lib/ix-table/ix-table.component.html
@@ -32,7 +32,7 @@
                 [ngTemplateOutletContext]="{ $implicit: row, column: column }" />
             }
             @if (!getColumnDef(column)?.cellTemplate()) {
-              <span>{{ row[column] }}</span>
+              <span>{{ getCellValue(row, column) }}</span>
             }
           </td>
         }
