--- a/projects/truenas-ui/src/lib/ix-icon/ix-icon.component.html
+++ b/projects/truenas-ui/src/lib/ix-icon/ix-icon.component.html
@@ -28,9 +28,8 @@
     <!-- CSS class icons (Font Awesome, Material Icons, etc.) -->
     @case ('css') {
       <i
-         class="ix-icon__css"
          aria-hidden="true"
-         [class]="iconResult.content">
+         [class]="'ix-icon__css ' + iconResult.content">
       </i>
     }
 
